// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<div
  className="tableWrapper"
>
  <table
    className="table"
  >
    <thead>
      <tr
        className="tableHeadRow"
      >
        <th
          className="tableHeadCell"
          key="id"
        >
          Id
        </th>
        <th
          className="tableHeadCell"
          key="name"
        >
          Name
        </th>
        <th
          className="tableHeadCell"
          key="dateOfBirth"
        >
          Date of birth
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="tableRow"
        key="1"
      >
        <td
          className="tableCell"
          key="1-id"
        >
          1
        </td>
        <td
          className="tableCell"
          key="1-name"
        >
          Jan Novak
        </td>
        <td
          className="tableCell"
          key="1-dateOfBirth"
        >
          Thu Feb 01 2018
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="tableWrapper"
  id="custom-id"
>
  <table
    className="table"
  >
    <thead>
      <tr
        className="tableHeadRow"
      >
        <th
          className="isTableHeadCellSortingActive"
          id="custom-id__headerCell__id"
          key="id"
        >
          <div
            className="sortButton"
          >
            <ForwardRef(withForwardedRef(Button))
              beforeLabel={
                <span
                  className="icon"
                />
              }
              clickHandler={[Function]}
              id="custom-id__headerCell__id__sortButton"
              label="asc"
              labelVisibility="none"
              priority="flat"
            />
          </div>
          Id
        </th>
        <th
          className="tableHeadCell"
          id="custom-id__headerCell__name"
          key="name"
        >
          <div
            className="sortButton"
          >
            <ForwardRef(withForwardedRef(Button))
              beforeLabel={
                <span
                  className="icon"
                />
              }
              clickHandler={[Function]}
              id="custom-id__headerCell__name__sortButton"
              label="asc"
              labelVisibility="none"
              priority="flat"
            />
          </div>
          Name
        </th>
        <th
          className="tableHeadCell"
          id="custom-id__headerCell__dateOfBirth"
          key="dateOfBirth"
        >
          Date of birth
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="tableRow"
        key="1"
      >
        <td
          className="isTableCellSortingActive"
          id="custom-id__bodyCell__id__1"
          key="1-id"
        >
          1
        </td>
        <td
          className="tableCell"
          id="custom-id__bodyCell__name__1"
          key="1-name"
        >
          Jan Novak
        </td>
        <td
          className="tableCell"
          id="custom-id__bodyCell__dateOfBirth__1"
          key="1-dateOfBirth"
        >
          Thu Feb 01 2018
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
